--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ numpy = "^1.21.4"
 matplotlib = "^3.5.0"
 
 [tool.poetry.dev-dependencies]
+nsp2visasim = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -19,3 +20,4 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 diode = 'pythondaq.views.diode:cmd_group'
+application = 'pythondaq.views.application:main'
